resolve horizontal align issue for flexbox on all browsers

--- a/site.css
+++ b/site.css
@@ -66,6 +66,9 @@ ul {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: justify;
   justify-content: space-around;
 }
 
